@@ -1,4 +1,4 @@
-# $NetBSD: GENERIC,v 1.377 2013/06/05 23:08:00 christos Exp $
+# $NetBSD: GENERIC,v 1.378 2013/06/10 07:14:01 kardel Exp $
 #
 # GENERIC machine description file
 #
@@ -22,7 +22,7 @@ include	"arch/amd64/conf/std.amd64"
 
 options 	INCLUDE_CONFIG_FILE	# embed config file in kernel binary
 
-#ident 		"GENERIC-$Revision: 1.377 $"
+#ident 		"GENERIC-$Revision: 1.378 $"
 
 maxusers	64		# estimated number of users
 
@@ -531,6 +531,9 @@ ld*	at iop? tid ?			# block devices
 
 # Pulsing GPIO pins in software
 #gpiopwm*	at gpio?
+
+# Soekris 6501 GPIO/LED driver (provides gpiobus, needs gpio)
+#soekrisgpio0	at isa? port 0x680
 
 # SCSI Controllers and Devices
 
